--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -445,7 +445,7 @@ body.splash-transition
       .photo
         breakout()
         display: block
-        height: 90px
+        height: 91px
         margin-bottom: 20px
         // XXX should be using a cssrewrite filter instead of hardcoded
         &.bek
@@ -487,7 +487,7 @@ body.splash-transition
 
     section.services
       ol
-        font: headline_size/headline_lh headline_font
+        font: headline_size/1 headline_font
         list-style: none
         margin: 0
         padding: 0
