--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -196,14 +196,14 @@ body.splash
     width: 100%
     > hr
       position: absolute
-  nav, .page-about .menu, .page-about .clients:after
+  nav, .page-about .menu
     position: absolute
   footer
     display: none
 
 // Show everyone while transitioning.
 body.splash-transition
-  nav, .page-about .menu, .page-about .clients:after
+  nav, .page-about .menu
     position: absolute
   .main
     height: auto
@@ -466,36 +466,40 @@ body.splash-transition
 
     section.clients
       breakout()
-      border-bottom: 1px solid cabin_grey_dark
-      box-shadow: inset 0 -2px 2px 0 rgba(cabin_grey_dark, .5)
-      height: 50px
-      margin-bottom: 20px
-      padding-bottom: 20px
-      padding-top: 20px
-      white-space: nowrap
-      overflow-x: scroll
+      div
+        breakout()
+        border-bottom: 1px solid cabin_grey_dark
+        box-shadow: inset 0 -2px 2px -1px rgba(cabin_grey_dark, .5)
+        height: 50px
+        margin-bottom: 20px
+        padding-bottom: 20px
+        padding-top: 20px
+        white-space: nowrap
+        overflow-x: scroll
       a
         background-color: cabin_grey_dark
-        margin-right: 20px
+        margin-left: 20px
+        &:first-child
+          margin-left: 0
       // Fake the grey background.
+      position: relative
       &:after
+        absolute: left top; bottom 0; width: 100%
         background: cabin_grey_dark
         content: ""
         display: block
-        fixed: left 0 top 80px; right 0; height 90px
         opacity: .5
+        pointer-events: none
 
     section.services
       ol
-        font: headline_size/1 headline_font
+        font-weight: bold
         list-style: none
         margin: 0
         padding: 0
-        text-transform: uppercase
         ol
           body-text()
-          margin: 10px 0 20px
-          text-transform: none
+          margin: 5px 0 20px
           li
             display: inline
             &:before
