--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -831,6 +831,7 @@ body.splash-transition
       breakout()
       background: #ebebe7  // XXX
       box-shadow: inset 0 0 3px 2px rgba(cabin_grey_dark, .3)
+      min-height: 400px
       padding-top: 60px
       padding-bottom: 60px
       h2
