--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -122,7 +122,7 @@
       device&mdash;mobile to überscreen. Built on the nest of a million deadly
       pythons using a dab of this and a pinch of that.</p>
 
-      xo - signature
+      <div class="signature">xo</div>
     </section>
 
     <section class="connect">
