Hide prev/next arrows on mobile project page

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -398,6 +398,12 @@ body.splash-transition
     breakout()
 
 
+  // Project page  {{{2
+  .page-project
+    .prev-next, .bottom
+      display: none
+
+
   // About page  {{{2
   .page-about
     .menu
