--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -479,6 +479,7 @@ body.splash-transition
         padding-top: 20px
         white-space: nowrap
         overflow-x: scroll
+        -webkit-overflow-scrolling: touch
       a
         background-color: cabin_grey_dark
         margin-left: 20px
