Hide iPhone address bar; fixes #9

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -181,6 +181,8 @@ html, body
   box-sizing: border-box
   min-height: 100%
   relative: top
+  .iphone &
+    margin-bottom: -60px
 // Avoid page-width jump.
 body
   overflow-y: scroll
