Drop "Founder" from our titles

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -34,7 +34,7 @@
         <span class="photo bek"></span>
         <hgroup>
           <h2>Bek Hodgson</h2>
-          <h3><span class="founder">Founder / </span>Creative Director</h3>
+          <h3>Creative Director</h3>
         </hgroup>
 
         <p>Bek Hodgson is a designer and strategist who has worked to define
@@ -58,7 +58,7 @@
         <span class="photo zak"></span>
         <hgroup>
           <h2>Zak Johnson</h2>
-          <h3><span class="founder">Founder / </span>Technologist</h3>
+          <h3>Technologist</h3>
         </hgroup>
 
         <p>Zak Johnson has architected and developed software for over a
