Use unicode space character in pseudo-element content
... to work around a bug in cssmin.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -497,7 +497,7 @@ body.splash-transition
           li
             display: inline
             &:before
-              content: ", "
+              content: ",\0020"
             &:first-child:before
               content: ""
 
