Set image placeholder width to 100%; fixes #27

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -287,7 +287,7 @@ body.splash-transition
   .images img
     background-color: cabin_grey_light
     clear: both
-    max-width: 100%
+    width: 100%
     margin-bottom: 60px
     vertical-align: top
     &.shadow
