Lock footer content to page width

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -64,18 +64,20 @@
       {% block content %}{% endblock %}
     </section>
 
-    <footer>
-      <p class="copyright"><span>&copy;</span>Cabin 2013</p>
-      {% if current_user %}
-        <a onclick="navigator.id.logout()" class="icon logout"></a>
-      {% endif %}
-      <ol>
-        <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
-        <li>+1 415 255 5473</li>
-        <li class="address"><a href="http://maps.apple.com/?q=4216+N+Mississippi+Ave,+97217" target="_blank">
-          4216 N Mississippi Ave #315<span>&middot;</span>Portland, OR 97217</a></li>
-      </ol>
-    </footer>
+    <div class="footer-container">
+      <footer>
+        <p class="copyright"><span>&copy;</span>Cabin 2013</p>
+        {% if current_user %}
+          <a onclick="navigator.id.logout()" class="icon logout"></a>
+        {% endif %}
+        <ol>
+          <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
+          <li>+1 415 255 5473</li>
+          <li class="address"><a href="http://maps.apple.com/?q=4216+N+Mississippi+Ave,+97217" target="_blank">
+            4216 N Mississippi Ave #315<span>&middot;</span>Portland, OR 97217</a></li>
+        </ol>
+      </footer>
+    </div>
   </div>
 
   {#
