--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -75,7 +75,7 @@ button, .button
 // Set the overall page width either to a max value (if passed a single
 // argument) or bounded between min and max widths (with two arguments).
 page-width(args...)
-  nav, .content
+  nav, .content, footer
     if length(args) == 1
       max-width: args[0]
     else
@@ -620,12 +620,14 @@ body.splash-transition
   body > header br.f
     display: block
 
-  footer
+  .footer-container
     absolute: bottom left; right: 0
     background: cabin_grey_light
     box-shadow: inset 0 2px 2px -2px cabin_grey_dark
+  footer
     height: footer_height
     line-height: @height
+    margin: 0 auto
     overflow: hidden
     padding: 0 30px
     &, a
