New social icons; fixes #33
Also added an outline where we were seeing edge artifacts

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -96,6 +96,9 @@ social-icon(twitter)
     &:checked
       @extend .icon.public
 
+  .social > a
+    outline: 1px solid white  // helps to cover up background peeking
+
   // social-icon(behance, true)
   social-icon(email, true)
   social-icon(facebook, true)
