--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -814,6 +814,8 @@ body.splash-transition
         bottom: 0
         a
           background-color: cabin_black
+          float: left
+          margin-right: 5px
           &:hover
             background-color: cabin_bronze
 
