--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -24,7 +24,7 @@
       partner with other like-minded folks who value design and technology as
       indispensable tools for sharing, uniting, and making a difference.</p>
 
-      <a class="email button" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
+      <a class="email button-arrow" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
     </section>
 
     <section class="partners selected">
