--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -54,7 +54,7 @@ h1
   @extend .headline-text
   margin: 30px 0
 
-button, .button
+button, .button, .button-arrow
   @extend .small-header-text
   background: cabin_grey_light
   border: none
@@ -71,6 +71,16 @@ button, .button
     light-text()
     background: cabin_bronze
     color: white
+.button-arrow
+  padding-right: 26px
+  position: relative
+  &:after
+    absolute: right 12px top; bottom 0
+    background-position: center center
+    background-repeat: no-repeat
+    content: ""
+    display: block
+
 
 // Set the overall page width either to a max value (if passed a single
 // argument) or bounded between min and max widths (with two arguments).
