--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -127,13 +127,13 @@
 
     <section class="connect">
       <ol>
-        <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
-        <li>+1 415 255 5473</li>
-        <li><a target="_blank" href="http://madebycabin.tumblr.com/">Blog</a></li>
-        <li><a target="_blank" href="https://twitter.com/madebycabin">Twitter</a></li>
-        <li><a target="_blank" href="https://www.facebook.com/madebycabin">Facebook</a></li>
-        <li><a target="_blank" href="http://www.flickr.com/photos/madebycabin">Flickr</a></li>
-        <li><a target="_blank" href="https://github.com/cabin">GitHub</a></li>
+        <li class="email"><a href="mailto:xo@madebycabin.com">Email</a></li>
+        <li class="phone">415 255 5473</li>
+        <li class="tumblr"><a target="_blank" href="http://madebycabin.tumblr.com/">Blog</a></li>
+        <li class="facebook"><a target="_blank" href="https://www.facebook.com/madebycabin">Facebook</a></li>
+        <li class="twitter"><a target="_blank" href="https://twitter.com/madebycabin">Twitter</a></li>
+        <li class="flickr"><a target="_blank" href="http://www.flickr.com/photos/madebycabin">Flickr</a></li>
+        <li class="github"><a target="_blank" href="https://github.com/cabin">GitHub</a></li>
       </ol>
     </section>
   </div>
