Switch to cabin_black on infographic and colophon

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -896,7 +896,7 @@ body.splash-transition
           margin-top: 5px
 
     section.colophon
-      background-color: cabin_bronze
+      background-color: cabin_black
       clear: none
       color: white
       float: right
