--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -318,6 +318,14 @@ body.splash-transition
     h3
       @extend .dim-text
       margin: 0
+  .bio .social
+    clearfix()
+    a
+      background-color: cabin_black
+      float: left
+      margin-right: 5px
+      .no-touch &:hover
+        background-color: cabin_bronze
   .graph
     white-space: nowrap
     svg
@@ -432,7 +440,7 @@ body.splash-transition
         size: 0 0
         transition: left 200ms ease-in-out
 
-    .content > h1, .sections section, .sections section > h1, .social
+    .content > h1, .sections section, .sections section > h1
       display: none
     .sections
       clearfix()
@@ -443,22 +451,33 @@ body.splash-transition
 
     section.partners .bio
       breakout()
-      &:first-child
-        border-top: none
-      .photo
+      hgroup
         breakout()
-        display: block
-        height: 91px
+        height: 65px
+        background-color: cabin_grey_dark
+        background-size: cover
+        margin-bottom: 1px
+        padding-top: 25px
+        h2, h3
+          light-text()
+          color: white
+          margin: 0
+        h2
+          font-size: 24px
+        h3
+          body-text()
+      // XXX should be using a cssrewrite filter instead of hardcoded
+      &.bek hgroup
+        background-image: url(/static/photos/bek-stripe@2x.jpg)
+      &.zak hgroup
+        background-image: url(/static/photos/zak-stripe@2x.jpg)
+      .social
         margin-bottom: 20px
-        // XXX should be using a cssrewrite filter instead of hardcoded
-        &.bek
-          background-image: url(/static/about-bek.jpg)
-          background-position: 55% 38%
-          background-size: cover
-        &.zak
-          background-image: url(/static/about-zak.jpg)
-          background-position: 43% 36%
-          background-size: cover
+      p, .social
+        display: none
+      &.open
+        p, .social
+          display: block
 
     section.graph
       breakout()
@@ -831,12 +850,6 @@ body.splash-transition
       .social
         position: absolute
         bottom: 0
-        a
-          background-color: cabin_black
-          float: left
-          margin-right: 5px
-          &:hover
-            background-color: cabin_bronze
 
     section.graph
       breakout()
