--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -79,6 +79,9 @@
 
     <section class="graph selected">
       <h2>It takes two<br>to make it out of sight.</h2>
+      <hgroup class="small">
+        <h2>Fun facts</h2><h3>1978&ndash;2013</h3>
+      </hgroup>
       <div></div>
     </section>
 
