Fix flicker on iPad tab toggler

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -782,7 +782,7 @@ body.splash-transition
       text-transform: uppercase
       // Cover the top border with the hover-hr.
       hr { top: -1px }
-      &.selected, &:hover
+      &.selected, .no-touch &:hover
         light-text('reset')
         color: cabin_black
       &.selected
