--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -84,7 +84,10 @@
       <hgroup class="small">
         <h2>Fun facts</h2><h3>1978&ndash;2013</h3>
       </hgroup>
-      <div></div>
+      <div class="notes">
+        <div class="year"></div><div class="note"></div>
+      </div>
+      <div class="svg"></div>
     </section>
 
     <section class="clients">
