Adjust infographic notes position

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -530,6 +530,8 @@ body.splash-transition
           line-height: 1
         h3
           body-text()
+      .notes
+        margin-top: 20px
 
     section.clients
       breakout()
@@ -955,8 +957,8 @@ body.splash-transition
         display: none
       .notes
         margin-top: 30px
-        // XXX figure out positioning here
         position: absolute
+        top: 120px
         .year
           absolute: left top
           border-top: 1px solid cabin_black
