Highlight the label of the active infographic chunk

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -334,7 +334,7 @@ body.splash-transition
         vertical-align: top
         display: inline-block
         .selected
-          &, path.main
+          &, path.main, text
             fill: cabin_bronze
           path.highlight
             fill: #b8a878
