Add rule-behind and fix centering on splash

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -32,8 +32,10 @@
   <header>
     <hgroup>
       <h1>Cabin</h1>
-      <h2>Crafting experiences <br class="m">for people
-        <br class="f">&amp; <br class="m">projects we love.</h2>
+      <h3><span>Design &times; Build</span></h3>
+      <h2>Crafting experiences<span class="br m"></span
+        >for people<span class="br f"></span>&amp;<span class="br m"></span
+        >projects we love.</h2>
     </hgroup>
   </header>
 
