--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -117,6 +117,35 @@ hover-hr(duration = 200ms)
     width: 100%
 
 
+// Apply centered text on top of a horizontal rule, with padding. For example:
+//
+//     <h1><span>My heading</span></h1>
+//
+//     h1
+//       rule-behind(span)
+//
+// Renders:
+// ------- My heading -------
+//
+rule-behind(text_container_element, color = cabin_black)
+  overflow: hidden
+  text-align: center
+  & > {text_container_element}
+    position: relative
+    &:before, &:after
+      border-top: 1px solid color
+      content: ""
+      display: block
+      margin: 0 1em
+      position: absolute
+      top: 50%
+      width: 200%
+    &:before
+      right: 100%
+    &:after
+      left: 100%
+
+
 // nav/splash  {{{2
 
 body > header
@@ -151,17 +180,20 @@ body > header
       background-repeat: no-repeat
       background-position: center center
       background-size: contain
-  h2
-    border-top: 1px solid cabin_grey_dark
+  h2, h3
     color: cabin_grey_med
-    font: 18px/1.33 body_font
     letter-spacing: 1px
-    margin-top: 30px
-    padding-top: 24px
     text-transform: uppercase
-  // These are enabled per media query.
-  br
-    display: none
+  h2
+    font: 18px/1.33 body_font
+    white-space: nowrap
+    // Custom linebreaks; "white-space: pre" is added for f/m classes.
+    .br:before
+      content: "\A"
+  h3
+    rule-behind(span, cabin_grey_dark)
+    font: 12px/1 body_font
+    margin: 23px 0
 
 .nav-container
   background: white
@@ -422,10 +454,11 @@ body.splash-transition
       height: 50px
     h2
       font-size: 14px
-      margin-top: 20px
-      padding-top: 16px
-    br.m
-      display: block
+    h3
+      font-size: 10px
+      margin: 17px 0;
+    .br.m
+      white-space: pre
 
   footer
     display: none
@@ -702,8 +735,8 @@ body.splash-transition
     padding-top: nav_height
     padding-bottom: footer_height + 40px
 
-  body > header br.f
-    display: block
+  body > header .br.f
+    white-space: pre
 
   .footer-container
     absolute: bottom left; right: 0
