Add dev_shortlist field to model and admin
Refs #42.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -1315,6 +1315,14 @@ body.splash-transition
       .sortable-placeholder
         background: cabin_grey_light
 
+    .shortlist
+      margin-top: 60px
+      padding-left: 280px
+      legend
+        width: 260px
+      textarea
+        size: (540 / 2) 200
+
     .buttons
       margin: 80px 0 40px
       button, a
