--- a/cabin/templates/admin/project.html
+++ b/cabin/templates/admin/project.html
@@ -76,6 +76,11 @@
       <button>Add cohort</button>
     </fieldset>
 
+    <fieldset class="shortlist">
+      <legend>Development Shortlist</legend>
+      {{ render(form.dev_shortlist) }}
+    </fieldset>
+
     <fieldset class="images">
       <legend>Project images</legend>
       <a class="select-multiple-files button">
