Ensure OG image url includes hostname

--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% set title = project.title %}
 {% set page = 'project' %}
-{% set page_image = image_url(project.thumbnail_file) %}
+{% set page_image = image_url(project.thumbnail_file)|external_url %}
 {% set page_description = project.brief %}
 
 {% block content %}
