Add twitter:site meta tag

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
+  <meta name="twitter:site" content="@madebycabin">
   <meta property="og:site_name" content="Cabin">
   <meta property="og:type" content="website">
   <meta property="fb:admins" content="507275748">
