--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -524,7 +524,7 @@ body.splash-transition
       font-size: 14px
     h3
       font-size: 10px
-      margin: 17px 0;
+      margin: 17px 0
     .br.m
       white-space: pre
 
