--- a/cabin/style/default.styl
+++ b/cabin/style/default.styl
@@ -1,3 +1,6 @@
+// Default styles that I tend to use across all projects. Assumes normalize.css
+// has already been applied.
+
 // Prevent extra space below unfloated images.
 img
   vertical-align: bottom
@@ -6,5 +9,6 @@ img
 a
   cursor: pointer
 
+// Since I often delegate tapclick events, avoid highlighting the container.
 .tapclick
   -webkit-tap-highlight-color: transparent
