--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -47,6 +47,13 @@ a
 body-text()
   font: 14px/1.3 body_font
 
+mini-text()
+  light-text()
+  background: cabin_black
+  color: cabin_grey_dark
+  font-size: 11px
+  text-transform: uppercase
+
 .thin-text
   font-weight: normal
 
@@ -175,10 +182,7 @@ body > header
     font-size: 80px
     height: 85px
     .svg.backgroundsize &
-      hide-text()
-      background-image: url('cabin-logo.svg')
-      background-repeat: no-repeat
-      background-position: center center
+      replace-text: url('cabin-logo.svg')
       background-size: contain
   h2, h3
     color: cabin_grey_med
@@ -203,9 +207,7 @@ nav
   user-select: none
   position: relative
   .logo
-    hide-text()
-    background-image: url('cabin-symbol.svg')
-    background-repeat: no-repeat
+    replace-text: url('cabin-symbol.svg')
     .no-svg &
       background-image: url('cabin-symbol.png')
   .links a
@@ -281,12 +283,12 @@ body.splash-transition
   width: 260px
 
   h2, h3
-    font-size 1em
+    font-size: 1em
     margin: 0
   h2
     @extend .small-header-text
   h3
-    @extends .dim-text
+    @extend .dim-text
     margin-bottom: 26px
   img
     margin: 0 auto
@@ -548,18 +550,17 @@ body.splash-transition
     .prev-next, .bottom
       display: none
 
+    .dev-shortlist-toggle
+      mini-text()
+
 
   // About page  {{{2
   .page-about
     .menu
-      fixed: left 0 top nav_height; right 0
       clearfix()
-      light-text()
-      background: cabin_black
-      color: cabin_grey_dark
-      font-size: 11px
+      mini-text()
+      fixed: left 0 top nav_height; right 0
       text-align: center
-      text-transform: uppercase
       user-select: none
       z-index: 2
       a
@@ -763,10 +764,8 @@ body.splash-transition
       .no-touch &:hover
         border-color: cabin_grey_med
       span
-        hide-text()
-        text-indent: -999em
         img = 'icons/plus@2x.png'
-        background-image: url(img)
+        replace-text: url(img)
         size: (image-size(img)[0] / 2) (image-size(img)[1] / 2)
         background-size: @width @height
         display: inline-block
@@ -794,7 +793,9 @@ body.splash-transition
         a:nth-child(6)
           transition-delay: 500ms
       .toggle span
-        transform: rotate(45deg)
+        // Scale is increased to improve diagonal line visibility.
+        transform: rotate(45deg) scale(1.1)
+        backface-visibility: hidden
 
   body > header
     bottom: nav_height
