--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -68,7 +68,8 @@
 
   {% if project.dev_shortlist %}
     <div class="dev-shortlist">
-      <a class="dev-shortlist-toggle">Development Shortlist</a>
+      <h3>Development Shortlist</h3>
+      <a class="dev-shortlist-toggle"><span>Toggle</span></a>
       <div class="dev-shortlist-window">
         <ul>
         {% for item in project.dev_shortlist %}
