--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -973,6 +973,7 @@ body.splash-transition
       font-size: 13px
 
     .bottom
+      position: relative
       text-align: center
       .social
         display: inline-block
@@ -981,6 +982,38 @@ body.splash-transition
           background-color: black
           &:hover
             background-color: cabin_bronze
+      .pinterest-image-picker
+        absolute: bottom 100% left
+        background: cabin_grey_light
+        max-width: 500px
+        padding: 5px
+        a
+          float: left
+          margin: 10px
+          min-height: 85px
+          max-height: 170px
+          overflow: hidden
+          position: relative
+          width: 170px
+          img
+            max-width: 100%
+            max-height: 100%
+          .button
+            light-text()
+            display: none
+            background-color: cabin_black
+            color: white
+            absolute: left 50% top 50%
+            margin-top: -(button_height / 2)
+            width: 60px
+            padding-left: 0
+            padding-right: 0
+            margin-left: -(@width / 2)
+        a:hover
+          img
+            opacity: .3
+          .button
+            display: block
 
 
   // About page  {{{2
