--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -89,18 +89,32 @@
   </div>
 
   <div class="bottom">
+  {% with %}
+    {% set url = url_for('main.project', slug=project.slug, _external=true)|urlquote %}
+    {% set title = ("%s by Cabin" % project.title)|urlquote %}
+    {# If there are no project images (dev-only projects), share the thumbnail
+       image, which is required. If there is one image, share that image. If there
+       is more than one image, we'll be popping open the picker, so just use the
+       thumbnail as a placeholder. -#}
+    {% set image_file = project.images[0].file if project.images|length == 1 else project.thumbnail_file %}
+    {% set share_image_url = image_url(image_file)|external_url|urlquote %}
     <a class="arrow-left" href="{{ url_for('main.project', slug=project.prev_slug) }}">Previous</a>
     <div class="social">
-    {% with %}
-      {% set url = url_for('main.project', slug=project.slug, _external=true)|urlquote %}
-      {% set title = ("%s by Cabin" % project.title)|urlquote %}
       <a href="https://www.facebook.com/sharer/sharer.php?t={{ title -}}&u={{ url }}" class="facebook">Facebook</a>
       <a href="https://twitter.com/intent/tweet?url={{ url }}&text={{ title }}&hashtags=madebycabin&related=madebycabin" class="twitter">Twitter</a>
-      {# TODO: Allow users to select from the project's images.
-      <a href="http://pinterest.com/pin/create/button/?url={{ url }}&description={{ title }}&media={{ image_url(project.thumbnail_file)|urlquote }}" class="pinterest">Pinterest</a>
-      -#}
-    {% endwith %}
+      <a href="http://pinterest.com/pin/create/button/?url={{ url }}&description={{ title }}&media={{ share_image_url }}" class="pinterest">Pinterest</a>
     </div>
+    {% if project.images|length > 1 %}
+    <div class="pinterest-image-picker" hidden>
+      {% for image in project.images %}
+        <a href="http://pinterest.com/pin/create/button/?url={{ url }}&description={{ title }}&media={{ image_url(image.file)|external_url|urlquote }}">
+          <img src="{{ image_url(image.file) }}" alt>
+          <span class="button">Pin it</span>
+        </a>
+      {% endfor %}
+    </div>
+    {% endif %}
     <a class="arrow-right" href="{{ url_for('main.project', slug=project.next_slug) }}">Next</a>
+  {% endwith %}
   </div>
 {% endblock %}
