Black selected hover-hrs; fixes #51

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -123,6 +123,8 @@ hover-hr(duration = 200ms)
     transition: width duration
   .no-touch &:hover hr, &.selected hr
     width: 100%
+  &.selected hr
+    background: cabin_black
 
 
 // Apply centered text on top of a horizontal rule, with padding. For example:
