--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -977,16 +977,21 @@ body.splash-transition
     .bottom
       position: relative
       text-align: center
+      a, .social
+        vertical-align: top
       .social
         display: inline-block
-        margin: 0 15px
+        margin: 0 15px 0 10px
         > a
+          float: left
+          margin-left: 5px
           background-color: black
           &:hover
             background-color: cabin_bronze
       .pinterest-image-picker
-        absolute: bottom 100% left
+        absolute: bottom 100% left 50%
         background: cabin_grey_light
+        margin-bottom: 20px
         max-width: 500px
         padding: 5px
         a
@@ -1016,6 +1021,10 @@ body.splash-transition
             opacity: .3
           .button
             display: block
+        &:after
+          css-arrow(color: cabin_grey_light, position: bottom)
+          content: ""
+          display: block
 
 
   // About page  {{{2
